--- a/CSS/Layout/layout.css
+++ b/CSS/Layout/layout.css
@@ -1,4 +1,13 @@
 ﻿.no-whitespace {
     padding: 0;
     margin: 0;
+    /*background-image: url('../../Gallery/maiden_background.jpg');*/
+}
+
+html {
+    /*background-image: url('../../Gallery/maiden_background.jpg');*/
+    /*background-image: url('../../Gallery/wl38fOM-iron-maiden-wallpaper.jpg');*/
+    background-image: url('../../Gallery/9300851672_4e4cc744b3_o.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
