--- a/Views/Admin.html
+++ b/Views/Admin.html
@@ -1,1 +1,25 @@
-﻿
+﻿<br />
+<br />
+<div class="col-md-12">
+    <h3 ng-bind="title"></h3>
+    <p>Welcome to Dummy Chat. Select the channel you want to go in!</p>
+</div>
+<div class="col-md-12">
+    <div ng-repeat="channel in models.channels track by $index">
+        <h3 ng-bind="channel.name"></h3>
+        <button type="button"
+                class="btn btn-danger"
+                ng-click="deleteChannel(channel)">
+            <span class="glyphicon glyphicon-remove"></span> Delete channel
+        </button>
+        <!--<subscribe-button ng-model="message.subscribed"
+                          ng-click="subscribe(message.author)"></subscribe-button>
+        <channel-vote channel="channel"></channel-vote>-->
+    </div>
+    <!--<div ng-repeat="message in models.messages track by $index">
+        <h3 ng-bind="message.title"></h3>
+        <h3 ng-bind="message.author"></h3>
+        <p ng-bind="message.body"></p>
+        <p ng-bind="message.postDate"></p>
+    </div>-->
+</div>
