--- a/Views/Channels/NewChannel.html
+++ b/Views/Channels/NewChannel.html
@@ -1,1 +1,36 @@
-﻿
+﻿<div class="col-md-12" ng-init="clicked = false">
+    <h1 ng-bind="title"></h1>
+</div>
+
+<div class="col-md-4">
+    <form ng-submit="addChannel()">
+        <fieldset>
+            <legend>Create channel</legend>
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text"
+                       id="title"
+                       class="form-control"
+                       placeholder="Title..."
+                       ng-model="newChannel.title" />
+            </div>
+            <div class="form-group">
+                <label for="author">Author</label>
+                <input type="text"
+                       id="author"
+                       class="form-control"
+                       placeholder="Author..."
+                       ng-model="newChannel.author" />
+            </div>
+            <div class="form-group">
+                <label for="body">Body</label>
+                <textarea id="body"
+                          class="form-control"
+                          style="width: 100%; height: 200px;"
+                          placeholder="Body..."
+                          ng-model="newChannel.body"></textarea>
+            </div>
+            <!--<success-button ng-model="clicked"></success-button>-->
+        </fieldset>
+    </form>
+</div>
