--- a/Views/Home.html
+++ b/Views/Home.html
@@ -1,3 +1,20 @@
-﻿<div class="col-md-12">
+﻿<br />
+<br />
+<div class="col-md-12">
     <h3 ng-bind="title"></h3>
+    <p>Welcome to Dummy Chat. Select the channel you want to go in!</p>
+</div>
+<div class="col-md-12">
+    <div ng-repeat="channel in models.channels track by $index">
+        <h3 ng-bind="channel.name" ng-click="go('/Channel/' + channel.id)"></h3>
+        <!--<button type="button"
+                class="btn btn-danger"
+                ng-click="deleteChannel(channel)">
+            <span class="glyphicon glyphicon-remove"></span> Delete channel
+        </button>-->
+        <!--<subscribe-button ng-model="message.subscribed"
+                          ng-click="subscribe(message.author)"></subscribe-button>
+        <channel-vote channel="channel"></channel-vote>-->
+    </div>
+   
 </div>
