--- a/Views/Partials/Navbar.html
+++ b/Views/Partials/Navbar.html
@@ -15,7 +15,15 @@
                 <li ng-class="{active: $route.current.activeTab == 'Home'}">
                     <a href="/">Home</a>
                 </li>
-                <li ng-class="{active: $route.current.activeTab == 'Channels'}" class="dropdown" id="menu1" data-toggle="dropdown">
+                <li ng-class="{active: $route.current.activeTab == 'Subscriptions'}">
+                    <a href="/Subscriptions">Subscriptions</a>
+                </li>
+                <li ng-class="{active: $route.current.activeTab == 'Admin'}">
+                    <a href="/Admin">Admin</a>
+                </li>
+
+                <!-- dropdown menu for channels -->
+                <!--<li ng-class="{active: $route.current.activeTab == 'Channels'}" class="dropdown" id="menu1" data-toggle="dropdown">
                     <a href="/Channels" class="dropdown-toggle" data-toggle="dropdown">
                         Channels<span class="caret"></span>
                     </a>
@@ -41,7 +49,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
