added favs functionalities

--- a/Views/Favorites.html
+++ b/Views/Favorites.html
@@ -6,7 +6,7 @@
     <h3 ng-bind="channel.name"></h3>
     <button type="button"
             class="btn btn-danger"
-            ng-click="unsubscribe(channel.id)">
-        <span class="glyphicon glyphicon-eye-close"></span> Unsubscribe
+            ng-click="unsubscribe(channel.ids)">
+        <span class="glyphicon glyphicon-minus-sign"></span> Unsubscribe
     </button>
 </div>
