--- a/Views/Admin.html
+++ b/Views/Admin.html
@@ -1,30 +1,6 @@
-﻿<!--<div class="col-md-12">
-    <h3 ng-bind="title"></h3>
-</div>-->
-<!--<div class="col-md-4 col-md-offset-4">
-    <form ng-submit="addChannel()">
-        <fieldset>
-            <legend>Add channel</legend>
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text"
-                       id="name"
-                       class="form-control"
-                       placeholder="Name..."
-                       ng-model="newChannel.name" />
-            </div>
-            <button type="submit"
-                    class="btn btn-success">
-                <span class="glyphicon glyphicon-plus"></span> Create channel
-            </button>
-        </fieldset>
-    </form>
-</div>-->
-<br />
-<br />
-<div class="col-md-12">
+﻿<div class="col-md-12">
     <div class="col-md-4 col-md-offset-4">
-        <h2 ng-bind="title" class="text-center glyphicon glyphicon-fire"></h2>
+        <h2 ng-bind="title" class="text-center"></h2>
         <fieldset>
             <legend></legend>
         </fieldset>
@@ -49,6 +25,5 @@
         </button>
     </div>
 </div>
- <!--<success-button ng-model="clicked"></success-button>-->
 
 <div ng-include="'Views/Partials/NewChannelModal.html'"></div>
