--- a/Views/Channel.html
+++ b/Views/Channel.html
@@ -1,35 +1,4 @@
-﻿<!--<div class="col-md-4 col-md-offset-2">
-    <form ng-submit="addMessage()" class="affix">
-        <fieldset>
-            <legend>Add message</legend>
-            <div class="form-group">
-                <label for="author">Author</label>
-                <input type="text"
-                       id="author"
-                       class="form-control"
-                       placeholder="Author..."
-                       ng-model="newMessage.author" />
-            </div>
-            <div class="form-group">
-                <label for="body">Body</label>
-                <textarea id="body"
-                          class="form-control"
-                          style="width: 100%; height: 200px;"
-                          placeholder="Body..."
-                          ng-model="newMessage.body"></textarea>
-            </div>
-            <button type="submit"
-                    class="btn btn-success">
-                <span class="glyphicon glyphicon-plus"></span> Create message
-            </button>
-        </fieldset>
-    </form>
-</div>-->
-<br />
-<br />
-<br />
-<br />
-<div class="col-md-12">
+﻿<div class="col-md-12">
     <div class="col-md-4 col-md-offset-4">
         <h1 id="glow" class="text-center" ng-bind="currentChannel.name"></h1>
         <button type="button"
@@ -52,6 +21,3 @@
 </div>
 
 <div ng-include="'Views/Partials/NewMessageModal.html'"></div>
-
-<!--<h3><timer interval="3000" /></h3>-->
-<!--<success-button ng-model="clicked"></success-button>-->
