--- a/Views/Favorites.html
+++ b/Views/Favorites.html
@@ -1,12 +1,10 @@
-﻿<br />
-<br />
-<div class="col-md-12">
+﻿<div class="col-md-12">
     <div class="col-md-4 col-md-offset-4">
-        <h2 ng-bind="title" class="text-center fa fa-star fa-2x"></h2>
+        <h2 ng-bind="title" class="text-center"></h2>
         <fieldset>
             <legend></legend>
         </fieldset>
-        <p>These are your favorite channels. You can unsubscribe at any time.</p>
+        <p>Here you can find your favorite channels. You can unsubscribe at any time.</p>
     </div>
 </div>
 <div class="col-md-12">
@@ -14,7 +12,8 @@
         <h3 ng-bind="channel.name"></h3>
         <button type="button"
                 class="btn btn-primary"
-                ng-click="unsubscribe(channel.ids)">
+                ng-click="toggleSubscription(channel.id)"
+                ng-class="{'true':'button-default','false':'button-unique'}">
             <span class="glyphicon glyphicon-minus"></span> Unsubscribe
         </button>
     </div>
