changed modal buttons

--- a/Views/Partials/NewChannelModal.html
+++ b/Views/Partials/NewChannelModal.html
@@ -16,13 +16,8 @@
                                ng-model="newChannel.name"
                                placeholder="Channel name" />
                     </div>
-                    <button type="submit" class="btn btn-warning">Add</button>
+                    <button type="submit" class="btn btn-warning pull-right">Add</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">
-                    Close
-                </button>
             </div>
         </div>
     </div>
