--- a/Views/Partials/NewMessageModal.html
+++ b/Views/Partials/NewMessageModal.html
@@ -1,7 +1,5 @@
 ﻿<div id="newMessageModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
-
-        <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
@@ -25,13 +23,8 @@
                                ng-model="newMessage.author"
                                placeholder="Message author" />
                     </div>
-                    <button type="submit" class="btn btn-warning">Add</button>
+                    <button type="submit" class="btn btn-warning pull-right">Add</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">
-                    Close
-                </button>
             </div>
         </div>
     </div>
